# wasabi

./: .clang-format.  .gitignore  .travis.yml  CMakeLists.txt  README.md  set_env.sh  wasabi.sh  wasabi_external.sh  wasabi_src.sh
config/: CMakeLists.txt  (+7 more)
config/binaryen/: CMakeLists.txt
config/cjson/: CMakeLists.txt
config/wasmsysroot/: CMakeLists.txt
config/wasmtime/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt
src/InA_Interpreter/: CMakeLists.txt  InA_Interpreter.cpp  InA_Interpreter.h  InA_Interpreter_main.cpp  InA_Interpreter_test.cpp  ServerInfo.cpp  ServerInfo_test.cpp  js_fct.syms  main.cpp
src/InA_Interpreter/include/: server_info_response.h  test_data.h
src/InA_Interpreter/resources/: response_getResponse_Metadata_expand_cube.json
src/InA_grid/: CMakeLists.txt  axis.cpp  axis.h  cells.cpp  cells.h  grid.cpp  grid.h  gridWriter.cpp  grid_test.cpp
src/InA_metadata/: Attribute.cpp  Attribute.h  AttributeWriter.cpp  CMakeLists.txt  Cube.cpp  Cube.h  CubeWriter.cpp  Dimension.cpp  Dimension.h  DimensionWriter.cpp  Member.cpp  Member.h  MemberWriter.cpp  MemerWriter.cpp
src/InA_query_model/: Attribute.cpp  Attribute.h  AttributeReader.cpp  CMakeLists.txt  DataSource.cpp  DataSource.h  DataSourceReader.cpp  DataSourceWriter.cpp  Definition.cpp  Definition.h  DefinitionReader.cpp  Dimension.cpp  Dimension.h  DimensionReader.cpp  DimensionWriter.cpp  Formula.cpp  Formula.h  FormulaReader.cpp  Function.cpp  Function.h  FunctionReader.cpp  InA_DataSource.cpp  InA_DataSource.h  InA_DataSourceReader.cpp  InA_DataSourceWriter.cpp  InA_dimension.cpp  InA_dimension.h  InA_dimensionReader.cpp  InA_dimensionWriter.cpp  InA_member.cpp  InA_member.h  InA_memberReader.cpp  InA_query.cpp  InA_query.h  InA_queryDefinition.cpp  InA_queryDefinition.h  InA_queryDefinitionReader.cpp  InA_queryFilter.cpp  InA_queryFilter.h  InA_queryFilterComparison.cpp  (+34 more)
src/InA_query_model/Selection/: Element.cpp  Element.h  ElementReader.cpp  Selection.cpp  Selection.h  SelectionElement.cpp  SelectionElement.h  SelectionElementReader.cpp  SelectionReader.cpp
src/calculator/: CMakeLists.txt  Storage.h  axe.cpp  axe.h  body.cpp  body.h  common.h  cube.cpp  cube.h  cube_test.cpp  indexisSet.h  object.cpp  object.h  storage.cpp  storage.h  storage_test.cpp
src/common/: Log.h  data.h
src/cube/: CMakeLists.txt  cube.h  cube_test.cpp
src/dbproxy/: CMakeLists.txt  dbproxy.cpp  dbproxy.h  dbproxy_metadat_test.cpp  dbproxy_metadata_test.cpp  dbproxy_test.cpp  js_fct.syms  test.cpp
src/dbproxy/cs/: cs.cpp  cs.h
src/dbproxy/sqlite/: queries.h  sqlite.cpp  sqlite.h  sqlite_test.cpp
src/dbproxy/sqlite/efashion/: createtables.h  insertdata.h  table_Agg_yr_qt_mt_mn_wk_rg_cy_sn_sr_qt_ma.h  table_Article_Color_Lookup.h  table_Article_Lookup_Criteria.h  table_Article_lookup.h  table_Calendar_year_lookup.h  table_Outlet_Lookup.h  table_Shop_facts.h.REMOVED.git-id  table_data_Agg_yr_qt_rn_st_ln_ca_sr.h  table_product_promotion_facts.h  table_promotion_lookup.h
src/dbproxy/sqlite/efashion/todo/: Article_Lookup_Criteria .h  Article_lookup.h  Calendar_year_lookup .h  Outlet_Lookup .h  Shop_facts.h.REMOVED.git-id  product_promotion_facts .h  promotion_lookup.h
src/dbproxy/sqlite/efashion_lite/: efashion_lite.db  efashion_lite.sql
src/dbproxy/sqlite/onetable_datatype/: createtable.h  onetable_datatype.db  table_onetable_datatype.h
src/deprecated/wasi/: polyfill.js
src/deprecated/wasi_experiments/: CMakeLists.txt
src/exceptions/: CMakeLists.txt  InA_Exception.h  cxa_exception.cpp  js_fcts.syms
src/grid/: CMakeLists.txt  grid_test.cpp
src/json/: CMakeLists.txt  jsonReader.cpp  jsonReader.h  jsonWriter.cpp  jsonWriter.h  test_data.h  test_reader.cpp  test_writer.cpp
src/json/include/json/: JSONWriter.h  jsonWriter.h
src/json/src/: CMakeLists.txt  jsonReader.cpp  jsonWriter.cpp
src/json/test/: CMakeLists.txt  test_json.cpp  test_writer.cpp
src/log/: Log.h
src/metadata_enrichment/: CMakeList.txt  CMakeLists.txt  Tables.cpp  Tables.h  Tables_test.cpp  metadata_enrichment.cpp  metadata_enrichment.h  metadata_enrichment_test.cpp  task.txt
src/metadata_enrichment/doc/: README.md  getMetaData.json  getServerInfo.json
src/metadata_enrichment/include/: ServerInfo.h  metadata_enrichment.h
src/metadata_enrichment/include/metadata_enrichment/: ServerInfo.h  Table.h  Tables.h  metadata_enrichment.h
src/metadata_enrichment/src/: CMakeLists.txt  ServerInfo.cpp  Table.cpp  Tables.cpp
src/metadata_enrichment/test/: CMakeLists.txt  ServerInfo_test.cpp  Tables_test.cpp  metadata_enrichment_test.cpp  metadata_enrichtment_test.h
src/query_generator/: CMakeLists.txt  ModelSQLGenerator.cpp  ModelSQLGenerator.h  query_generator.cpp  query_generator.h  query_generator_test.cpp
src/test/: CMakeLists.txt
src/test/C/: CMakeLists.txt  C_clock_monotonic.c  C_clock_process.c  C_clock_realtime.c  C_fstat.c  C_libc.c  C_libc_dl.c  C_libc_dl_A.c  C_libc_dl_B.c  C_nolib.c  C_read.c  C_write.c
src/test/CPP/: CMakeLists.txt  CPP_Withlibcxx.cpp  CPP_libcxx.cpp  CPP_libcxx.hpp  CPP_nolib_class.cpp  CPP_nolib_exception.cpp  wasm_helper.h
src/test/basic_wasm_jsapi/: index.html  js_fct.syms  main.cc
src/test/sqlite/: CMakeLists.txt  sqlite_example.cpp
src/test/wasi/: CMakeLists.txt  test.cpp
src/test_tools/include/test_tools/: TestAssert.h
src/uilib/: .eslintrc.json  README.md  package-lock.json  package.json  pom.xml  ui5.yaml
src/uilib/src/sap/wasabi/: .gitignore  .library  BridgedWorker.js  MicroCubeWorker.js  WASI_API.js  WASI_Module.js  library.js  main.js
src/uilib/src/sap/wasabi/rsbitt/: Component.js  manifest.json
src/uilib/src/sap/wasabi/rsbitt/controller/: App.controller.js
src/uilib/test/sap/wasabi/: Example.html  bootstrap.js  index.html
src/wasi/: index.html  polyfill.js
src/wasi_browser/: .gitignore  CMakeLists.txt  CS_proto.js  CS_test.js  MicrocubeApi.js  Microcube_worker.js  Microcube_worker_test.js  WASI_API.js  WASI_Module.js  index.html  main.js
src/wasi_browser/resources/: response_getSerververInfo.json
src/wasi_experiments/: CMakeLists.txt  ReadMe.txt
(+103 files in other folders)
